src/App.css
:root {
  color-scheme: light dark;
  --bg-color: light-dark(#FAFAFA, #161616);
  --txt-color: light-dark(#161616, #FAFAFA);
  --image-filter: light-dark(invert(0%), invert(100%));

}

html, body {
  margin: 0;
  height: 100%;
  text-align: left;
  background-color: var(--bg-color);
  box-sizing: border-box;
  transition: background-color 0.3s;
  font-family: "OpenRunde", Arial, Helvetica, sans-serif;
}

@font-face {
    font-family: "OpenRunde";
    src: url("/assets/Fonts/OpenRunde-Regular.woff") format("woff");
    font-weight: 400;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "OpenRunde";
    src: url("/assets/Fonts/OpenRunde-Medium.woff") format("woff");
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "OpenRunde";
    src: url("/assets/Fonts/OpenRunde-Semibold.woff") format("woff");
    font-weight: 600;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "OpenRunde";
    src: url("/assets/Fonts/OpenRunde-Bold.woff") format("woff");
    font-weight: 700;
    font-style: normal;
    font-display: swap;
}

.content {
  color: var(--txt-color);
  display: flex;
  margin: auto;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  min-height: 100vh; 
  max-width: 300px;
  text-align: left;
}

.sections {
  cursor: pointer;
  margin: 0;
}


.sections ul {
  list-style: none;
  padding: 0;
  margin: 15;
  cursor: pointer;
  font-weight: 100;
  transition: opacity .1s cubic-bezier(0.075, 0.82, 0.165, 1)
}

.item {
  opacity: .7;
  backface-visibility: hidden;
  transition: opacity .1s cubic-bezier(0.075, 0.82, 0.165, 1)
}

.item:hover {
  opacity: 1;
}

@keyframes socials {
  0% {
    transform: rotate(-5deg);
  }
  50% {
    transform: rotate(5deg);
  }
  100% {
    transform: rotate(-5deg);
  }
}

.image {
  opacity: .6;
  transition: opacity .3s cubic-bezier(0.075, 0.82, 0.165, 1)
}

.image:hover {
  opacity: 1;
  animation: socials .8s infinite cubic-bezier(0.165, 0.84, 0.44, 1);
}

.music-container {
  transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1);
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
}


.music-container:active {
  scale: .8;
}

.project-preview {
  display: none;
  visibility: hidden;
  right: -9999px;
  bottom: -9999px;
}

@media (min-width: 860px) {
  .project-preview {
    display: block; 
    visibility: visible;
    position: fixed; 
    z-index: 100;
    pointer-events: none; 
    right: 5vw;
    bottom: 10vh;
    width: 425px;
    height: 300px;
    border-radius: 15px;
    overflow: hidden;
    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
  }

  .project-preview video {
    width: 100%;
    height: 100%;
    object-fit: contain; 
    background: #1c1e26;
  }
}

